spring-data-jpa/src/main/java/ru/sabitov/example/error/ErrorResponse.java
package ru.sabitov.example.error;

public record ErrorResponse(String message) {
}
